Fixed issue with Search Bar being distorted when screen size is reduced

--- a/webapp/css/mapTest.css
+++ b/webapp/css/mapTest.css
@@ -5,7 +5,9 @@
 
 #searchDiv{
     z-index: 2;
-    margin-top: 50px
+    margin-top: 50px;
+    width: 30%;
+    
 }
 
 #mainSearchBtn{
@@ -192,7 +194,7 @@ body{
     width: 100%;
     position: absolute;
     padding: 15px;
-  top: 50px;
+    top: 50px;
 }
 
 #wrapper.toggled #page-wrapper6 {
@@ -200,9 +202,12 @@ body{
     margin-right: -250px;
 }
 
-@media(min-width: 768px){
+@media(max-width: 768px){
   .slidebar-nav{
     width: 250px;
+  }
+  #searchDiv{
+    display:inline-flex;
   }
 }
 
@@ -508,10 +513,6 @@ p{
 
 #mainContainer{
     height: 100%;
-}
-
-#searchDiv{
-    width: 25%;
 }
 
 .marker {
